# api/user.py
@@ -1,5 +1,8 @@
 from flask import jsonify
 from connexion import NoContent
+from orm import db, User
+import sqlalchemy
+
 
 # Using connexion automatic routing
 # paths:
@@ -24,16 +27,42 @@ from connexion import NoContent
 
 
 def search():
-    return jsonify([])
+    return jsonify([user.as_response() for user in User.query.all()])
+
 
 def post(body):
-    return  NoContent, 200
+    name = body['name']
+    password = body['password']
+    from argon2 import PasswordHasher
+    ph = PasswordHasher()
+    user = User(name=name, password=ph.hash(password))
+    try:
+        db.session.add(user)
+        db.session.commit()
+    except sqlalchemy.exc.SQLAlchemyError:
+        return NoContent, 400
+    return jsonify(User.query.filter_by(name=name).one().as_response()), 201
+
 
 def update(id, body):
-    return  NoContent, 200
+    return NoContent, 200
+
 
 def get(id):
-    return jsonify({})
+    try:
+        return jsonify(User.query.filter_by(id=id).one().as_response())
+    except sqlalchemy.orm.exc.NoResultFound:
+        return NoContent, 404
+    except sqlalchemy.exc.SQLAlchemyError:
+        return NoContent, 500
+
 
 def delete(id):
-    return NoContent, 200
+    try:
+        db.session.delete(User.query.filter_by(id=id).one())
+        db.session.commit()
+    except sqlalchemy.orm.exc.NoResultFound:
+        return NoContent, 404
+    except sqlalchemy.exc.SQLAlchemyError:
+        return NoContent, 500
+    return NoContent, 204
